[package]
name = "drakors"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
bevy_ecs = "0.17"
bevy_app = "0.17"
tokio = { version = "1.49", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.9"
