[package]
name = "drakors"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
base64 = "0.22"
bevy_ecs = "0.17"
bevy_app = "0.17"
blake3 = "1.8"
rand = "0.9"
tokio = { version = "1.49", features = ["full"] }
toml = "0.9"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
subtle = "2.6"